deployments/cilium-too-many-request.yaml
apiVersion: cilium.io/v2
kind: CiliumEnvoyConfig
metadata:
  name: envoy-rate-limit
spec:
  services:
    - name: stronghold
      namespace: azeroth
  resources:
    - "@type": type.googleapis.com/envoy.config.listener.v3.Listener
      name: envoy-lb-listener
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: envoy-lb-listener
                rds:
                  route_config_name: stronghold_route
                http_filters:
                  - name: envoy.filters.http.local_ratelimit
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
                      stat_prefix: http_local_rate_limiter
                      token_bucket:
                        # The total number of tokens that can accumulate.
                        max_tokens: 10
                        # How many tokens are added each fill_interval.
                        tokens_per_fill: 10
                        # The duration between adding additional tokens to the bucket.
                        fill_interval: 60s
                      # A percentage of requests to apply the rate limit to. Defaults to 0.
                      filter_enabled:
                        runtime_key: local_rate_limit_enabled
                        default_value:
                          numerator: 100
                          denominator: HUNDRED
                      # The fraction of enabled requests to actually enforce.
                      filter_enforced:
                        runtime_key: local_rate_limit_enforced
                        default_value:
                          numerator: 100
                          denominator: HUNDRED
                      # A header to add when a rate limit is enforced.
                      response_headers_to_add:
                        - append: true
                          header:
                            key: x-local-rate-limit
                            value: 'true'
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
    - "@type": type.googleapis.com/envoy.config.route.v3.RouteConfiguration
      name: stronghold_route
      virtual_hosts:
        - name: "stronghold_route"
          domains: [ "*" ]
          routes:
            - match:
                prefix: "/"
              route:
                cluster: "azeroth/stronghold"
    - "@type": type.googleapis.com/envoy.config.cluster.v3.Cluster
      name: "azeroth/stronghold"
      connect_timeout: 5s
      lb_policy: ROUND_ROBIN
      type: EDS
