deployments/simple-stronghold.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-stronghold
  namespace: azeroth
  labels:
    class: stronghold
    version: v1
    app.kubernetes.io/name: simple-stronghold
spec:
  replicas: 1
  selector:
    matchLabels:
      class: stronghold
      version: v1
      app.kubernetes.io/name: simple-stronghold
  template:
    metadata:
      labels:
        class: stronghold
        version: v1
        app.kubernetes.io/name: simple-stronghold
    spec:
      containers:
        - image: ghcr.io/vmaleze/cilium-hands-on/stronghold:1.0.0
          name: stronghold
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: stronghold
  namespace: azeroth
  labels:
    class: stronghold
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    class: stronghold
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: simple-stronghold
  namespace: azeroth
  labels:
    class: stronghold
    version: v1
    app.kubernetes.io/name: simple-stronghold
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    class: stronghold
    version: v1
    app.kubernetes.io/name: simple-stronghold
  type: ClusterIP
